# ufabc-compiladores-isic

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml
examples/: a.out  collatz.c  collatz.isi  hello-world.c  hello-world.isi  test2.isi
isic-back/: Cargo.toml
isic-back/src/: builtins.rs  cemitter.rs  isi_error.rs  lib.rs  symbol.rs
isic-cli/: Cargo.toml
isic-cli/src/: main.rs
isic-front/: Cargo.toml
isic-front/examples/: hello-world.isi
isic-front/src/: ast.rs  lib.rs  parser.rs  span.rs  visitor.rs
isic-interpreter/: Cargo.toml
isic-interpreter/src/: interpreter.rs  lib.rs
isic-middle/: Cargo.toml
isic-middle/src/: iast.rs  lib.rs  typeck.rs  usageck.rs
isic-playground/: index.html  package.json  vite.config.ts
isic-playground-glue/: Cargo.toml
isic-playground-glue/src/: lib.rs
isic-playground/src/: App.styles.ts  App.tsx  code-results-window.tsx  diagnostics-window.tsx  editor-window.style.tsx  editor-window.tsx  index.css  interpreter-window.tsx  window.style.ts  window.tsx
