[package]
name = "isic-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isic-front = { path="../isic-front" }
isic-back = { path="../isic-back" }
isic-middle = { path="../isic-middle" }

clap = { version="4.3", features=["derive"] }
ariadne = "0.3.0"
