[package]
name = "isic-playground-glue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.4"
ariadne = { version = "0.3.0", features = ["auto-color"] }

isic-front = { path="../isic-front" }
isic-back = { path="../isic-back" }
isic-middle = { path="../isic-middle" }
isic-interpreter = { path="../isic-interpreter" }
console_error_panic_hook = "0.1.7"
